# OmeroCrate

./: .gitmodules  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: omero-test.yml
docs/: alternatives.md  api.md  cli.md  example.qmd  roadmap.md
docs/alternatives/: index.html
docs/api/: index.html
docs/cli/: index.html
docs/roadmap/: index.html
search/: search_index.json
src/omerocrate/: __init__.py  cli.py  gateway.py  ome_xml.jinja2  ome_xml.py  schema.yml  uploader.py  uris.py  utils.py  xml_export.py
src/omerocrate/ome/: __init__.py  ome.py
src/omerocrate/ome_schema/: __init__.py  ome.py
src/omerocrate/sparql_template/: extension.py
src/omerocrate/taskqueue/: models.py  upload.py
test/: _sparql.jinja2  calcium_uploader.py  conftest.py  examples.json  foaf.json  sparql.jinja2  test_cli.py  test_ome_xml.py  test_sparql_template.py  test_taskqueue.py  test_upload.py  test_xml_serializer.py  util.py
test/ca-imaging/: index.html
test/demo_crate/: ro-crate-metadata.json
typings/omero/gateway/: __init__.pyi
